# MathNotes

./: .gitattributes  .gitignore  Makefile  README.md  header.tex  math_formulas.tex  reference.bib  release_message.md
.github/agents/: Math-Scribe.agent.md
LaTeX_queries/: amsthm.md  package_usage.md
[deprecated]/mathematical_analysis/: chapter13.tex  chapter14.tex  chapter16.tex  chapter17.tex  commands.tex  main.tex  preamble.tex
articles/: mathnotes-art.cls
articles/math_formulas/: main.tex
articles/simplex_method/: main.tex  zhihu_draft.md
code_demos/: log_normal_dist_demo.nb  pyproject.toml  simplex_method.py
code_demos/auto_course_selector/: main.py  pyproject.toml
code_demos/lights_out_problem/: config.json  gui.py  requirements.txt  solver.py  style.qss  utils.py
demos/: README.md  main.py
demos/approximation_problem/: .gitignore  Cargo.toml  README.md  approx.nb  approx_cy.pyi  approx_cy.pyx  approx_py.py  approx_rust.pyi  benchmark.py  justfile  pyproject.toml  setup.py
demos/approximation_problem/src/: lib.rs
demos/lights_out_problem/: config.json  pyproject.toml  style.qss  utils.py
deprecated/mathematical_analysis/: chapter14.tex  chapter15.tex  chapter16.tex  chapter17.tex
geometry/: chapter0.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  main.tex
linear-algebra/: chapter0.tex  chapter1.tex
linear_algebra/: chapter0.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter5.tex  main.tex
math_formulas/: main.tex
mathematical_analysis/: chapter1.tex  main.tex
notes/: header.tex  header_art.tex  header_rep.tex  mathnotes-art.cls  mathnotes-rep.cls  reference.bib
notes/[deprecated]mathematical_analysis/: chapter13.tex  chapter14.tex  chapter16.tex  main.tex  preamble.tex
notes/articles/: mathnotes-art.cls
optimization_method/: main.tex
probability/: chapter3.tex  chapter4.tex  chapter5.tex  main.tex
real_analysis/: chapter1.tex  chapter2.tex  chapter3.tex  main.tex
(+48 files in other folders)
