[package]
name = "approximation_problem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "approx_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[dependencies]
approx = "0.5.1"
pyo3 = "0.27.0"
pyo3-stub-gen = "0.7"

[profile.release]
opt-level = 3           # Maximum optimization
lto = "fat"             # Whole-program analysis (Link Time Optimization)
codegen-units = 1       # Reduce parallel compilation to allow better optimization across units
panic = "abort"         # Remove stack unwinding bloat (slight speedup)
strip = "symbols"       # Optional: reduces binary size, doesn't affect speed much

