[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "approximation_problem"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "cython>=3.2.3",
    "jupyter>=1.1.1",
    "maturin>=1.10.2",
    "numba>=0.58.1",
    "tabulate>=0.9.0",
]
